objects/Green_Light_Scoring__c/Green_Light_Scoring__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>minimum score for color assignment</description>
    <label>Green Light Scoring</label>
</CustomObject>