objects/Green_Light_Scoring__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>text to display to the user as a hover for the image</description>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>