objects/Green_Light_Scoring__c/fields/Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Name__c</fullName>
    <description>name of the image to display</description>
    <label>Image Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>