objects/Green_Light_Scoring__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>minimum score to assign the associated color to.</description>
    <label>Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>